tasa-dev/tasa-pgr-dev-clusterip_v001.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasa-pgr-dev-clusterip
  namespace: tasa-dev
spec:
  selector:
    app: tasa-pgr-dev
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8080
